Release 1.0 (in development)
============================

* Added new HTML theme ``agogo``, created by Andi Albrecht.

* Added new minimal theme called scrolls, created by Armin Ronacher.

* Added ``html_output_encoding`` config value.

* #200: Added ``Sphinx.add_stylesheet()``.

* Added ``titlesonly`` option to ``toctree`` directive.

* Removed the deprecated ``sphinx.builder`` module.

* #193: Added a ``visitedlinkcolor`` theme option to the default
  theme.

* Added the ``prepend`` and ``append`` options to the
  ``literalinclude`` directive.

* Added the ``latex_docclass`` config value and made the "twoside"
  documentclass option overridable by "oneside".

* Added the ``trim_doctest_flags`` config value, which is true by default.

* Added the ``extlinks`` extension.

* Allow searching for object names including the module name, like
  ``sys.argv``.

* Many improvements and fixes to the ``autosummary`` extension,
  thanks to Pauli Virtanen.

* Added ``html_show_copyright`` config value.

* Added simplified Chinese locale.

* Added ``latexpdf`` target in quickstart Makefile.

* Added ``htmltitle`` block in layout template.


Release 0.6.4 (in development)
==============================

* #238: In autodoc, catch all errors that occur on module import,
  not just ``ImportError``.

* Fix the handling of non-data, but non-method descriptors in autodoc.

* When copying file times, ignore OSErrors raised by ``os.utime()``.


Release 0.6.3 (Sep 03, 2009)
============================

* Properly add C module filenames as dependencies in autodoc.

* #253: Ignore graphviz directives without content instead of
  raising an unhandled exception.

* #241: Fix a crash building LaTeX output for documents that contain
  a todolist directive.

* #252: Make it easier to change the build dir in the Makefiles
  generated by quickstart.

* #220: Fix CSS so that displaymath really is centered.

* #222: Allow the "Footnotes" header to be translated.
