@@ -12,12 +12,10 @@
 import re
 import os
 import time
-import heapq
 import types
 import codecs
 import imghdr
 import string
-import difflib
 import cPickle as pickle
 from os import path
 from glob import glob
@@ -757,7 +755,7 @@ class BuildEnvironment:
     def process_metadata(self, docname, doctree):
         """
         Process the docinfo part of the doctree as metadata.
-        Keep processing minimal - just return what docutils says.
+        Keep processing minimal -- just return what docutils says.
         """
         self.metadata[docname] = md = {}
         try:
@@ -772,7 +770,7 @@ class BuildEnvironment:
             # nodes are multiply inherited...
             if isinstance(node, nodes.authors):
                 md['authors'] = [author.astext() for author in node]
-            elif isinstance(node, nodes.TextElement): #e.g. author
+            elif isinstance(node, nodes.TextElement): # e.g. author
                 md[node.__class__.__name__] = node.astext()
             else:
                 name, body = node
