@@ -1,6 +1,9 @@
 Release 1.0 (in development)
 ============================
 
+* All docinfo metadata is now put into the document metadata, not just
+  the author.
+
 * Added new HTML theme ``agogo``, created by Andi Albrecht.
 
 * Added new minimal theme called scrolls, created by Armin Ronacher.
